[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pgpro_pytest_html_json_extractor*"]

[tool.setuptools.dynamic]
version = {attr = "pgpro_pytest_html_json_extractor.__version__"}

[project]
name = "pgpro-pytest-html-json-extractor"
description = "A tool to extract json from pytest-html report"
readme = "README.md"
license = "MIT"
dynamic = ["version"]

authors = [
    {name = "Postgres Professional", email = "info@postgrespro.ru"}
]

requires-python = ">=3.8"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Framework :: Pytest",
]

dependencies = [
    "beautifulsoup4>=4.11.1",
    "packaging>=21.0",
]

[project.urls]
"HomePage" = "https://github.com/postgrespro/pgpro-pytest-html-merger"

[project.scripts]
pgpro-pytest-html-json-extractor = "pgpro_pytest_html_json_extractor.__main__:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file_level = "NOTSET"
log_file_format = "%(levelname)8s [%(asctime)s] %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.flake8]
extend-ignore = ["E501"]
exclude = [".git", "__pycache__", "env", "venv"]
